--- a/TMBhelper/DESCRIPTION
+++ b/TMBhelper/DESCRIPTION
@@ -2,11 +2,11 @@ Package: TMBhelper
 Type: Package
 Title: Package for basic helper functions that are not worth putting in a
     specialized contributed package
-Version: 1.0
+Version: 1.1.0
 Date: 2016-03-29
-Author: James Thorson <James.Thorson@noaa.gov>
+Authors@R: person("James","Thorson", email="James.Thorson@noaa.gov", role=c("aut","cre"))
 Maintainer: James Thorson <James.Thorson@noaa.gov>
 Description: Basic functions as suggested and contributed by users and not worth
     making an specific contributed R package
-License: What license is it under?
+License: GPL-3
 RoxygenNote: 6.1.0
